fixed wrong height on roster and goals when exceeding maximum visible rows

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,15 +4,20 @@
 @import 'tippy.js/dist/tippy.css';
 
 @layer base {
+    main {
+        padding-top: 63px;  /* height of header */
+        min-height: 100vh;
+    }
+}
+
+@layer components {
     .layout {
         max-width: 72rem; /* 1100px */
         width: 90%;
         margin-left: auto;
         margin-right: auto;
     }
-}
-
-main {
-    padding-top: 63px;  /* height of header */
-    min-height: 100vh;
+    .hockey-scrollbar {
+        @apply scrollbar-thumb-gray-400 hover:scrollbar-thumb-gray-500 scrollbar-track-gray-300 dark:scrollbar-thumb-black dark:scrollbar-track-black-800 dark:hover:scrollbar-thumb-black-900 scrollbar-thin;
+    }
 }
